src/main/metadata/objects/Article_Feedback__c.object
<CustomObject>
    <description>Article feedback tab will enable user to create a feedback record by entering Article number and the feedback details.</description>
    <fields>
        <fullName>Action_Taken__c</fullName>
        <description>Action Taken details will be captured here.</description>
        <inlineHelpText>Action Taken details will be captured here.</inlineHelpText>
        <label>Action Taken</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Article updated</fullName>
                </value>
                <value>
                    <fullName>Article deleted</fullName>
                </value>
                <value>
                    <fullName>Article replaced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action_date__c</fullName>
        <description>Action taken date will be captured here.</description>
        <inlineHelpText>Action taken date will be captured here.</inlineHelpText>
        <label>Action date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <description>Article Number will be captured here.</description>
        <inlineHelpText>Please enter the Article Number for which you wish to provide feedback.</inlineHelpText>
        <label>Article Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>Article feedback will be captured here.</description>
        <inlineHelpText>Article feedback will be captured here.</inlineHelpText>
        <label>Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_status__c</fullName>
        <description>Article feedback status will be captured here.</description>
        <inlineHelpText>Article feedback status will be captured here.</inlineHelpText>
        <label>Feedback status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Article Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Article Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ActionTaken_and_ActionDate_is_mandatory</fullName>
        <active>true</active>
        <description>Feedback Status cannot be set to “Closed” without populating Action Taken and Action date</description>
        <errorConditionFormula>AND(($Profile.Name != 'IntegrationAPI'),$Permission.INGeneric, 
ISPICKVAL( Feedback_status__c , "Closed"), ISPICKVAL(Action_Taken__c, "") || ISBLANK( Action_date__c ))</errorConditionFormula>
        <errorMessage>Action Taken and Action date is mandatory, when Feedback Status is “Closed”</errorMessage>
    </validationRules>
</CustomObject>